--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,17 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require": {
         "slim/slim": "^4.14",
         "slim/psr7": "^1.7",
         "slim/http": "^1.4",
         "slim/php-view": "^3.4",
         "php-di/php-di": "^7.0",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "symfony/var-dumper": "^7.3"
